[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonscad_stubs"
version = "0.0.1"
authors = [
  { name="Guenther Sohler", email="guenther.sohler@gmail.com" },
]
description = "PythonSCAD - python enhanced OpenSCAD"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "http://pythonscad.org"
Issues = "https://github.com/gsohler/openscad/issues"
